# mergepath

./: .ai_context.md  .gitignore  .repo-template.yml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  REVIEW_POLICY.md  SECURITY.md  ai_agent_tooling_standard.md
.claude/: config.json  settings.json
.cursor/: config.json
.github/: review-policy.yml
.github/workflows/: agent-review.yml  dependabot-auto-merge.yml  pr-audit.yml  pr-review-policy.yml  repo_lint.yml
docs/agents/: deployment-process.md  operating-rules.md  repository-overview.md
docs/specs/: firebase-sa-setup.md
functions/: README.md
mergepath/playground/: index.html
mockups/: README.md  mergepath.html
packaging/: README.md
packaging/npm/: README.md  package.json
packaging/pypi/: README.md  pyproject.toml
plans/: example_plan.md  mergepath-playground.md
rules/: repo_rules.md
scripts/: audit-branch-protection.sh  coderabbit-wait.sh  codex-review-check.sh  codex-review-request.sh  deploy.sh  op-preflight.sh  policy-sim.sh  request-label-removal.sh  resolve-pr-threads.sh
scripts/ci/: README.md  check_dist_not_modified  check_duplicate_docs  check_no_forbidden_top_level_dirs  check_no_tool_folder_instructions  check_resolve_pr_threads  check_spec_test_alignment  check_workflow_parsers
scripts/firebase/: op-firebase-deploy
scripts/gcloud/: gcloud
scripts/gh-projects/: README.md  lib.sh  move-item.sh
scripts/hooks/: gh-pr-guard.sh  label-removal-guard.sh
specs/: example_spec.md  mergepath_policy_configurator.md
tests/: README.md  test_mergepath_frontend.sh
(+12 files in other folders)
